# tcplugin-discord

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  log4rs.yaml
src/: main.rs
src/commands/: info.rs  mod.rs  servers.rs
src/discord/: mod.rs  server_command.rs
src/discord/commands/: mod.rs  server.rs  server_command.rs
src/ws/: client.rs  manager.rs  mod.rs  packets.rs
src/ws/packets/: incoming.rs  mod.rs  outgoing.rs
