[package]
edition = "2018"
name = "tc-discord"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
convert_case = "0.4.0"
dotenv = "0.15.0"
futures-util = "0.3.17"
log = "0.4.14"
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio-tungstenite = "0.15.0"
futures = "*"
tracing = "0.1.23"
tracing-subscriber = "0.2"
env_logger = "0.9.0"

[dependencies.uuid]
version = "*"
features = ["v4"]


[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "*"

